# lighting-mcp

./: .gitignore  .replit  DOCUMENTATION.md  INSTALLATION.md  README.md  api_tools.py  app.py  config.py  connection.py  database.py  dependencies.txt  logger.py  mcp_server.py  oracle_connection.py  oracle_tools.py  pyproject.toml  simple_app.py  simple_mcp_server.py  working_mcp_server.py
data/: enterprise_db.sqlite
